--- a/content/columns/20251218.md
+++ b/content/columns/20251218.md
@@ -1,20 +1,22 @@
-## 特設ページは[こちら](https://thoulab.jp/products/workshop/20260117A/)
+# [特設ページはこちら](https://thoulab.jp/products/workshop/20260117A/)
+本ワークショップに関する、より詳しい情報が記載されています。
+申し込みの方法も記載されてあります。興味のある方は是非特設ページを見てみてください！
 
-### 開催日時
-2026年1月17日（土）  
-11:00〜14:00（途中1時間のお昼休憩あり）
+## 開催日時
+>2026年1月17日（土）11:00〜14:00
+>（途中1時間のお昼休憩あり）
 
-### 開催場所
-藤沢駅 徒歩4分  
-ロボリンク  
-〒251-0052  
-神奈川県藤沢市藤沢559 角若松ビル 6階
+## 開催場所
+>藤沢駅 徒歩4分 ロボリンク  
+>〒251-0052
+>神奈川県藤沢市藤沢559 角若松ビル 6階
+[GoogleMapでひらく](https://www.google.co.jp/maps/place/%E3%83%AD%E3%83%9C%E3%83%AA%E3%83%B3%E3%82%AF/@35.3399239,139.4856416,17z/data=!3m1!4b1!4m6!3m5!1s0x60184fd718dc28c3:0x739837415ff0ac89!8m2!3d35.3399239!4d139.4882165!16s%2Fg%2F11wqmm1y98?entry=tts&g_ep=EgoyMDI1MTIwNy4wIPu8ASoASAFQAw%3D%3D&skid=9e217928-ad65-4533-8382-1001dc244094)
 
-### 募集対象
-- 小学生のお子さまとその保護者  
-- 親子1組での参加を想定しています  
-- プログラミングやロボット制作が初めての方も歓迎します
+## 募集対象
+>小学生のお子さまとその保護者  
+>親子1組での参加を想定しています  
+>プログラミングやロボット制作が初めての方も歓迎します
 
-### 参加費
-無料  
-※試験的（施行版）ワークショップとして実施するため、参加費はいただきません。
+## 参加費
+>無料 （事前申し込み必須）
+>※試験的（施行版）ワークショップとして実施するため、参加費はいただきません。
