--- a/content/columns/20251224.md
+++ b/content/columns/20251224.md
@@ -29,17 +29,19 @@
 私はこれに、少し子どもじみた疑問を持ったことがある。  
 「なぜ、同じように人生の時間を使っているのに、使い方に優劣がつくのか」  
 「なぜ、誰かが“してくれる”ことだけが、別の誰かの営みより偉いように扱われるのか」。
-しかしこの答えはとてもシンプルである。「先生」と呼ぶ対象はこれまでの時間に時間を費やしてきている。
+しかしこの答えはとてもシンプルである。「先生」と呼ぶ対象はこれまでの人生でその分野に人一倍の時間を費やしてきている。
 だから私たちはその積み上げてきた時間を頂くことに対して敬意を払っている。
 AIに対して「先生」と呼ぶべきだという価値観が生まれないのも、AIは人と同じ寿命を持たないからであると説明がつく。
 
-それでも私が引っかかるのは、**その敬称が、関係性の非対称を見えにくくする**ことだ。
+それでも私が引っかかるのは、**その敬称が日常的に使われることで、むしろ関係性の非対称を見えにくくする**ことだ。
 
 私が相手を「先生」と称するとき、私は一瞬だけ自分を「何も持たない可哀想な人」に仕立て上げる。
 そして、その立場を利用して「教えてもらう」「助けてもらう」という一方通行の関係を、正当化してしまう。
 自分の都合で相手を上に置き、自分を下に置く。すると、こちらは遠慮の形を取りながら、実は要求だけを通しやすくなる。
-さらに厄介なのはここにお金が絡むことである。お金を払っている、すなわち別の形で自分は社会に対して貢献をしているという状態は、一見すると健全な社会システムである。
-しかしながら、民主主義国家の一員でありながらこの態度を取る自分に対し、私は傲慢さを感じてしまう。
+さらに厄介なのはここにお金が絡むことである。お金を払っている、すなわち別の形で自分は社会に対して貢献をしているという状態は、相手の知恵と自分の知恵を対等に交換しているように感じられる。
+しかし本当に、私は社会の為に自分しか感じ取れないような何かを提供したのだろうか。
+
+一方通行の享受に疑問を抱かなくなっている自分に気づいたとき、民主主義国家の一員として私は己の傲慢さを感じる。
 ただし、国家感に触れるとややこしくなるのでここに踏み込むのは別の機会とする。
 
 さらにもう一つある。私はその場の違和感を、「そういうものだから」と半ば思考停止することで消してしまう。  
